--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,8 @@ html
     link(rel='stylesheet', type='text/css',href='/stylesheets/semantic.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   div(class="ui basic  segment")
-    h3(class="header brand")= title
+    h3(class="header brand").
+      hyphy.link
   body
     script(src='http://code.jquery.com/jquery-1.11.1.js')
     script(src='semantic/dist/semantic.min.js')
@@ -14,5 +15,5 @@ html
     block content
     div(id="footer")
       div(id="cr-notice").
-        &#169; 2016 hyphy.link ALL RIGHTS RESERVED
+        &#169; 2016 hyphy.link
 
