--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,7 @@
 doctype html
 html
   head
+    meta(name="viewport", content="width=device-width, initial-scale=1")
     title= title
     link(rel='stylesheet', type='text/css',href='/stylesheets/semantic.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
