--- a/views/error.jade
+++ b/views/error.jade
@@ -1,6 +1,9 @@
 extends layout
 
 block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+  div(class="ui one column center aligned grid spaced")
+    div(class="column eight wide")
+      h1(id="error-msg").
+        404
+      h4.
+        Page not found.
