--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,7 +9,7 @@ html
     h3(class="header brand").
       hyphy.link
   body
-    script(src='http://code.jquery.com/jquery-1.11.1.js')
+    script(src='https://code.jquery.com/jquery-1.11.1.js')
     script(src='semantic/dist/semantic.min.js')
     script(src='https://cdn.socket.io/socket.io-1.4.5.js')
     script(src='/javascripts/clipboard.js')
