--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,8 +6,9 @@ html
     link(rel='stylesheet', type='text/css',href='/stylesheets/semantic.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   div(class="ui basic  segment")
-    h3(class="header brand").
-      hyphy.link
+    h3(class="header brand")
+      span(style="color: orange")= 'hyphy'
+      span='.link'
   body
     script(src='https://code.jquery.com/jquery-1.11.1.js')
     script(src='semantic/dist/semantic.min.js')
