--- a/views/index.jade
+++ b/views/index.jade
@@ -41,7 +41,7 @@ block content
             $temp.remove();
             statusMessageBanner = $('div#status-msg');
             statusMessageBanner.css("background", "#66CD00");
-            statusMessageBanner.html(link + " copy to clipboard.")
+            statusMessageBanner.html(link + " copied to clipboard.")
               .slideDown('slow')
               .delay(2000)
               .slideUp('fast');
